--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <style>
 body{margin:0;font-family:Arial;background:#f4f6f9}
 .hidden{display:none}
-button{cursor:pointer}
+button{cursor:pointer;padding:6px 10px;margin:4px}
 input{padding:6px;margin:4px 0;width:100%}
 
 .header-login{text-align:center;padding:30px;background:white}
@@ -35,23 +35,8 @@ font-size:22px;font-weight:bold;cursor:pointer;background:transparent
 .confirmado{background:#2563eb}
 .realizado{background:#16a34a}
 .faltou{background:#dc2626}
-.bloqueio{background:#dc2626}
-.treinamento{background:#7c3aed}
 
-.grid-horarios{
-display:grid;
-grid-template-columns:repeat(4,1fr);
-gap:8px;
-margin-top:15px;
-}
-.horario-btn{
-padding:10px;
-border:1px solid #ccc;
-border-radius:6px;
-background:white;
-}
-.horario-btn:hover{background:#e5e7eb}
-
+.calendario-header{display:flex;justify-content:space-between;align-items:center}
 .calendario-grid{
 display:grid;
 grid-template-columns:repeat(7,1fr);
@@ -66,11 +51,27 @@ text-align:center;
 cursor:pointer;
 }
 .dia.lotado{background:#fecaca}
+.dia.bloqueado{background:#dc2626;color:white}
+
+.grid-horarios{
+display:grid;
+grid-template-columns:repeat(4,1fr);
+gap:8px;
+margin-top:15px;
+}
+.horario-btn{
+padding:10px;
+border:1px solid #ccc;
+border-radius:6px;
+background:white;
+}
+.horario-btn.ocupado{background:#ddd}
+.horario-btn.bloqueado{background:#dc2626;color:white}
+.horario-btn.treinamento{background:#7c3aed;color:white}
 </style>
 </head>
 <body>
 
-<!-- LOGIN -->
 <div id="loginScreen">
 <div class="header-login">
 <img src="logo-panobianco.png">
@@ -84,9 +85,7 @@ cursor:pointer;
 </div>
 </div>
 
-<!-- SISTEMA -->
 <div id="app" class="layout hidden">
-
 <div class="sidebar">
 <div class="sidebar-header">
 <img src="logo-panobianco.png" style="max-width:80px">
@@ -95,16 +94,14 @@ cursor:pointer;
 <div id="menuLateral"></div>
 <button onclick="logout()">Sair</button>
 </div>
-
 <div class="content">
 <div id="areaPrincipal"></div>
 </div>
-
 </div>
 
 <script>
 
-/* =================== ESTADO =================== */
+/* ================== ESTADO ================== */
 
 let usuarioTipo=null;
 let usuarioNome=null;
@@ -115,7 +112,7 @@ let bloqueios=JSON.parse(localStorage.getItem("bloqueios")||"[]");
 
 document.getElementById("anoAtual").innerText=new Date().getFullYear();
 
-/* =================== LOGIN =================== */
+/* ================== LOGIN ================== */
 
 function loginAdmin(){
 let senha=prompt("Senha Admin:");
@@ -129,8 +126,7 @@ entrar();
 function loginRecepcao(){
 let nome=prompt("Nome:");
 let senha=prompt("Senha:");
-
-let user=recepcionistas.find(r=>r.nome===nome && r.senha===senha);
+let user=recepcionistas.find(r=>r.nome===nome&&r.senha===senha);
 if(user){
 usuarioTipo="recepcao";
 usuarioNome=nome;
@@ -146,7 +142,7 @@ entrar();
 
 function logout(){location.reload();}
 
-/* =================== ENTRAR =================== */
+/* ================== ENTRAR ================== */
 
 function entrar(){
 limparAntigos();
@@ -154,37 +150,36 @@ document.getElementById("loginScreen").classList.add("hidden");
 document.getElementById("app").classList.remove("hidden");
 document.getElementById("usuarioLogadoLabel").innerText=usuarioNome;
 renderMenu();
-mostrarHoje();
+abrirCalendario();
 }
 
-/* =================== LIMPEZA 30 DIAS =================== */
+/* ================== LIMPEZA 30 DIAS ================== */
 
 function limparAntigos(){
 let hoje=new Date();
 agendamentos=agendamentos.filter(a=>{
-let d=new Date(a.dataISO);
+let d=new Date(a.data);
 return ((hoje-d)/(1000*60*60*24))<=30;
 });
 bloqueios=bloqueios.filter(b=>{
-let d=new Date(b.dataISO);
+let d=new Date(b.data);
 return ((hoje-d)/(1000*60*60*24))<=30;
 });
 salvar();
 }
 
-/* =================== MENU =================== */
+/* ================== MENU ================== */
 
 function renderMenu(){
 let m=document.getElementById("menuLateral");
 m.innerHTML="";
-m.innerHTML+=`<button onclick="mostrarHoje()">📅 Hoje</button>`;
 m.innerHTML+=`<button onclick="abrirCalendario()">📆 Calendário</button>`;
-m.innerHTML+=`<button onclick="buscarID()">🔎 Buscar ID</button>`;
+m.innerHTML+=`<button onclick="mostrarHoje()">📅 Hoje</button>`;
 
 if(usuarioTipo!=="professor"){
-m.innerHTML+=`<button onclick="novoAgendamento()">➕ Novo</button>`;
-m.innerHTML+=`<button onclick="bloquearDia()">🚫 Bloquear Dia</button>`;
-m.innerHTML+=`<button onclick="bloquearHorario()">⛔ Bloquear Horário</button>`;
+m.innerHTML+=`<button onclick="abrirCalendario(true)">➕ Novo Agendamento</button>`;
+m.innerHTML+=`<button onclick="modoBloqueioDia()">🚫 Bloquear Dia</button>`;
+m.innerHTML+=`<button onclick="modoBloqueioHorario()">⛔ Bloquear Horário</button>`;
 }
 
 if(usuarioTipo==="admin"){
@@ -192,119 +187,89 @@ m.innerHTML+=`<button onclick="cadastroRecep()">👥 Recepcionistas</button>`;
 }
 }
 
-/* =================== ORDENAR =================== */
+/* ================== CALENDÁRIO ================== */
 
-function ordenar(){
-agendamentos.sort((a,b)=>{
-if(a.dataISO===b.dataISO) return a.horario.localeCompare(b.horario);
-return new Date(a.dataISO)-new Date(b.dataISO);
-});
+let mesAtual=new Date().getMonth();
+let anoAtual=new Date().getFullYear();
+let modoAgendamento=false;
+let modoBloqueioDiaAtivo=false;
+let modoBloqueioHorarioAtivo=false;
+
+function abrirCalendario(agendamento=false){
+modoAgendamento=agendamento;
+modoBloqueioDiaAtivo=false;
+modoBloqueioHorarioAtivo=false;
+renderCalendario();
 }
 
-/* =================== HOJE =================== */
-
-function mostrarHoje(){
-ordenar();
-let hojeISO=new Date().toISOString().split("T")[0];
-let lista=agendamentos.filter(a=>a.dataISO===hojeISO);
-renderLista(lista,"Agendamentos de Hoje");
+function modoBloqueioDia(){
+modoBloqueioDiaAtivo=true;
+modoBloqueioHorarioAtivo=false;
+modoAgendamento=false;
+renderCalendario();
 }
 
-/* =================== RENDER LISTA =================== */
-
-function renderLista(lista,titulo){
-let area=document.getElementById("areaPrincipal");
-area.innerHTML=`<h2>${titulo}</h2><button onclick="mostrarHoje()">⬅ Voltar</button><br><br>`;
-if(lista.length===0){area.innerHTML+="Nenhum.";return;}
-
-lista.forEach(a=>{
-area.innerHTML+=`
-<div class="card">
-<b>${formatar(a.dataISO)} - ${a.horario}</b><br>
-${a.nome} (ID: ${a.id})<br>
-<span class="status ${a.status}">${a.status}</span><br>
-${acoes(a)}
-</div>`;
-});
+function modoBloqueioHorario(){
+modoBloqueioHorarioAtivo=true;
+modoBloqueioDiaAtivo=false;
+modoAgendamento=false;
+renderCalendario();
 }
 
-/* =================== AÇÕES =================== */
-
-function acoes(a){
-let h="";
-if(usuarioTipo==="professor"){
-h+=`<button onclick="alterar('${a.id}','${a.dataISO}','${a.horario}','realizado')">Realizada</button>`;
-h+=`<button onclick="alterar('${a.id}','${a.dataISO}','${a.horario}','faltou')">Faltou</button>`;
-}
-if(usuarioTipo!=="professor"){
-if(a.status==="pendente")h+=`<button onclick="alterar('${a.id}','${a.dataISO}','${a.horario}','mensagem')">Mensagem enviada</button>`;
-if(a.status==="mensagem")h+=`<button onclick="alterar('${a.id}','${a.dataISO}','${a.horario}','confirmado')">Presença confirmada</button>`;
-if(usuarioTipo==="admin"||a.criadoPor===usuarioNome)
-h+=`<button onclick="cancelar('${a.id}','${a.dataISO}','${a.horario}')">Cancelar</button>`;
-}
-return h;
-}
-
-function alterar(id,dataISO,horario,status){
-let a=agendamentos.find(x=>x.id===id&&x.dataISO===dataISO&&x.horario===horario);
-if(!a)return;
-a.status=status;
-salvar();
-mostrarHoje();
-}
-
-function cancelar(id,dataISO,horario){
-let i=agendamentos.findIndex(x=>x.id===id&&x.dataISO===dataISO&&x.horario===horario);
-if(i===-1)return;
-if(usuarioTipo!=="admin"&&agendamentos[i].criadoPor!==usuarioNome){
-alert("Somente responsável ou admin");
-return;
-}
-agendamentos.splice(i,1);
-salvar();
-mostrarHoje();
-}
-
-/* =================== NOVO AGENDAMENTO =================== */
-
-function novoAgendamento(){
-abrirCalendario(true);
-}
-
-/* =================== CALENDÁRIO =================== */
-
-function abrirCalendario(modoAgendamento=false){
+function renderCalendario(){
 
 let area=document.getElementById("areaPrincipal");
-let hoje=new Date();
-let mes=hoje.getMonth();
-let ano=hoje.getFullYear();
 
-renderCalendario(mes,ano,modoAgendamento);
-}
+area.innerHTML=`
+<div class="calendario-header">
+<button onclick="mesAnterior()">◀</button>
+<h2>${nomeMes(mesAtual)} ${anoAtual}</h2>
+<button onclick="mesSeguinte()">▶</button>
+</div>
+<div class="calendario-grid" id="gridCal"></div>
+`;
 
-function renderCalendario(mes,ano,modoAgendamento){
-
-let area=document.getElementById("areaPrincipal");
-area.innerHTML=`<h2>Calendário</h2>
-<button onclick="mostrarHoje()">⬅ Voltar</button>
-<div class="calendario-grid" id="gridCal"></div>`;
-
-let dias=new Date(ano,mes+1,0).getDate();
+let dias=new Date(anoAtual,mesAtual+1,0).getDate();
 let grid=document.getElementById("gridCal");
 
 for(let d=1;d<=dias;d++){
-let dataISO=new Date(ano,mes,d).toISOString().split("T")[0];
-let lotado=agendamentos.filter(a=>a.dataISO===dataISO).length>=21;
+
+let data=formatarISO(anoAtual,mesAtual,d);
+
 let div=document.createElement("div");
-div.className="dia"+(lotado?" lotado":"");
+div.className="dia";
 div.innerText=d;
-div.onclick=()=>selecionarDia(dataISO,modoAgendamento);
+
+if(bloqueios.find(b=>b.data===data&&b.tipo==="dia")){
+div.classList.add("bloqueado");
+}
+
+let ocupados=agendamentos.filter(a=>a.data===data).length;
+if(ocupados>=21)div.classList.add("lotado");
+
+div.onclick=()=>clicarDia(data);
+
 grid.appendChild(div);
 }
 }
 
-/* =================== HORÁRIOS =================== */
+function mesAnterior(){
+mesAtual--;
+if(mesAtual<0){mesAtual=11;anoAtual--;}
+renderCalendario();
+}
+function mesSeguinte(){
+mesAtual++;
+if(mesAtual>11){mesAtual=0;anoAtual++;}
+renderCalendario();
+}
+
+function nomeMes(m){
+return ["Janeiro","Fevereiro","Março","Abril","Maio","Junho","Julho",
+"Agosto","Setembro","Outubro","Novembro","Dezembro"][m];
+}
+
+/* ================== DIA ================== */
 
 const horarios=[
 "06:30","06:50","07:50","08:10","08:30","08:50","09:10","09:30",
@@ -312,83 +277,117 @@ const horarios=[
 "19:20","19:40","21:00","21:20"
 ];
 
-function selecionarDia(dataISO,modoAgendamento){
+function clicarDia(data){
+
+if(modoBloqueioDiaAtivo){
+bloqueios.push({data,tipo:"dia",criadoPor:usuarioNome});
+salvar();
+renderCalendario();
+return;
+}
 
 let area=document.getElementById("areaPrincipal");
-area.innerHTML=`<h2>${formatar(dataISO)}</h2>
-<button onclick="abrirCalendario(${modoAgendamento})">⬅ Voltar</button>
+area.innerHTML=`<h2>${data}</h2>
+<button onclick="renderCalendario()">⬅ Voltar</button>
 <div class="grid-horarios" id="gridHor"></div>`;
 
 let grid=document.getElementById("gridHor");
 
 horarios.forEach(h=>{
-let ocupado=agendamentos.find(a=>a.dataISO===dataISO&&a.horario===h);
-let bloqueado=bloqueios.find(b=>b.dataISO===dataISO&&b.horario===h);
-
 let btn=document.createElement("button");
 btn.className="horario-btn";
 btn.innerText=h;
 
-if(ocupado||bloqueado){
+let ocupado=agendamentos.find(a=>a.data===data&&a.horario===h);
+let bloqueado=bloqueios.find(b=>b.data===data&&b.horario===h);
+
+if(ocupado){
+btn.classList.add("ocupado");
 btn.disabled=true;
-btn.style.background="#ddd";
-}else if(modoAgendamento){
-btn.onclick=()=>confirmarAgendamento(dataISO,h);
+}
+if(bloqueado){
+btn.classList.add(bloqueado.motivo==="treinamento"?"treinamento":"bloqueado");
+btn.disabled=true;
+}
+
+if(modoBloqueioHorarioAtivo&&!ocupado&&!bloqueado){
+btn.onclick=()=>{
+let motivo=confirm("OK = Bloqueio Normal\nCancelar = Treinamento")?"normal":"treinamento";
+bloqueios.push({data,horario:h,tipo:"horario",motivo,criadoPor:usuarioNome});
+salvar();
+clicarDia(data);
+};
+}
+
+if(modoAgendamento&&!ocupado&&!bloqueado){
+btn.onclick=()=>confirmarAgendamento(data,h);
 }
 
 grid.appendChild(btn);
 });
 }
 
-/* =================== CONFIRMAR =================== */
+/* ================== AGENDAMENTO ================== */
 
-function confirmarAgendamento(dataISO,horario){
+function confirmarAgendamento(data,horario){
 
 let nome=prompt("Nome do aluno:");
-let id=prompt("ID numérico (até 10 dígitos):");
+let id=prompt("ID numérico até 10 dígitos:");
 
 if(!/^[0-9]{1,10}$/.test(id)){alert("ID inválido");return;}
-if(agendamentos.find(a=>a.id===id)){alert("ID já existente");return;}
+
+if(agendamentos.find(a=>a.data===data&&a.horario===horario)){
+alert("Horário já ocupado");
+return;
+}
 
 agendamentos.push({
-nome,id,dataISO,horario,
+nome,id,data,horario,
 status:"pendente",
 criadoPor:usuarioNome
 });
 
 salvar();
-mostrarHoje();
+clicarDia(data);
 }
 
-/* =================== BLOQUEIO =================== */
+/* ================== HOJE ================== */
 
-function bloquearDia(){
-abrirCalendario(false);
-alert("Clique no dia desejado.");
+function mostrarHoje(){
+let hoje=formatarISO(new Date().getFullYear(),new Date().getMonth(),new Date().getDate());
+let lista=agendamentos.filter(a=>a.data===hoje);
+renderLista(lista,"Hoje");
 }
 
-function bloquearHorario(){
-abrirCalendario(false);
-alert("Clique no dia e escolha horário.");
+/* ================== LISTA ================== */
+
+function renderLista(lista,titulo){
+let area=document.getElementById("areaPrincipal");
+area.innerHTML=`<h2>${titulo}</h2><button onclick="abrirCalendario()">⬅ Voltar</button><br><br>`;
+lista.sort((a,b)=>a.horario.localeCompare(b.horario));
+
+lista.forEach(a=>{
+area.innerHTML+=`
+<div class="card">
+${a.data} - ${a.horario}<br>
+${a.nome} (ID: ${a.id})<br>
+<span class="status ${a.status}">${a.status}</span>
+</div>`;
+});
 }
 
-/* =================== RECEPCIONISTAS =================== */
+/* ================== RECEPCIONISTAS ================== */
 
 function cadastroRecep(){
-
 let area=document.getElementById("areaPrincipal");
-area.innerHTML=`<h2>Cadastro Recepcionistas</h2>
+area.innerHTML=`<h2>Recepcionistas</h2>
 <input id="novoNome" placeholder="Nome único">
 <input id="novaSenha" placeholder="Senha">
 <button onclick="addRecep()">Cadastrar</button>
-<button onclick="mostrarHoje()">⬅ Voltar</button><br><br>`;
+<button onclick="abrirCalendario()">⬅ Voltar</button><br><br>`;
 
 recepcionistas.forEach(r=>{
-area.innerHTML+=`
-<div class="card">
-${r.nome}
-<button onclick="removerRecep('${r.nome}')">Excluir</button>
-</div>`;
+area.innerHTML+=`<div class="card">${r.nome}</div>`;
 });
 }
 
@@ -401,25 +400,12 @@ localStorage.setItem("recepcionistas",JSON.stringify(recepcionistas));
 cadastroRecep();
 }
 
-function removerRecep(nome){
-recepcionistas=recepcionistas.filter(r=>r.nome!==nome);
-localStorage.setItem("recepcionistas",JSON.stringify(recepcionistas));
-cadastroRecep();
-}
+/* ================== UTIL ================== */
 
-/* =================== BUSCA =================== */
-
-function buscarID(){
-let id=prompt("Digite ID:");
-let lista=agendamentos.filter(a=>a.id===id);
-renderLista(lista,"Resultado Busca");
-}
-
-/* =================== UTIL =================== */
-
-function formatar(dataISO){
-let d=new Date(dataISO);
-return d.toLocaleDateString("pt-BR");
+function formatarISO(ano,mes,dia){
+let m=String(mes+1).padStart(2,"0");
+let d=String(dia).padStart(2,"0");
+return `${ano}-${m}-${d}`;
 }
 
 function salvar(){
